# planning-euchre

./: .gitignore  LICENSE  README.md  bower.json  package-lib.yaml  package.json  planning-euchre.cabal  planning-euchre.code-workspace  stack-build-docker.sh  stack.yaml  webpack.config.js
app/: Main.hs  TypeGen.hs
backend/: LICENSE  package.yaml  stack.yaml
backend/src/Backend/: HttpApp.hs  State.hs  WsApp.hs
client/: bower.json  index.ejs
client/src/: Main.purs
client/src/App/: Config.js  Effects.purs  State.purs
client/src/App/Types/: App.purs  Card.purs  Command.purs  Room.purs  User.purs
client/src/App/View/: TodoList.purs
common/: package.yaml  stack.yaml
common/src/Common/: App.hs  Card.hs  Command.hs  Deck.hs  JSON.hs  Model.hs  Room.hs  Routes.hs  Story.hs  User.hs  View.hs
frontend/: package.yaml  stack.yaml
frontend/src/Frontend/: Update.hs
project/: stack-build-docker.sh
src/: App.hs  Card.hs  Command.hs  Deck.hs  HttpApp.hs  JSON.hs  Room.hs  Story.hs  Types.hs  User.hs  WsApp.hs
static/: app.js  index.html  project.css
