name:                planning-euchre
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/planning-euchre#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App, Card, Command, Deck, HttpApp, Room, Story, User, WsApp
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , http-types
                     , lens
                     , monad-loops
                     , safe
                     , scotty
                     , text
                     , wai
                     , wai-websockets
                     , wai-middleware-static
                     , warp
                     , websockets
  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists

executable planning-euchre-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , planning-euchre
                     , scotty
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010

test-suite planning-euchre-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , planning-euchre
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/planning-euchre
